trying to get factory up and runnning

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="script.js"></script>
 </head>
 
-<body ng-controller="landingController">
+<body ng-controller="landingController as lc">
 
 <header>
     <h1 class="main-heading">Grocery Buddy</h1>
@@ -41,10 +41,9 @@
 
 <div data-ng-view></div>
 
+</body>
 <footer>
     <p>©2016 Eugene Kwon</p>
 </footer>
-</body>
-
 
 </html>
