not adding to list

--- a/landing.html
+++ b/landing.html
@@ -7,9 +7,9 @@
             <th class="totalcost">Est. Total Cost</th>
             <th class="remove">Remove Item</th>
         </tr>
-        <tr  data-ng-repeat="item in items">
-            <td>{{ item.name }}</td>
-            <td>{{ item.qty }}</td>
+        <tr ng-repeat="i in items">
+            <td>{{ i.name }}</td>
+            <td>{{ i.qty }}</td>
             <td></td>
             <td></td>
             <td class="cancel" ng-click="remove()"><i class="fa fa-times" aria-hidden="true"></i></td>
@@ -26,7 +26,8 @@
 </form>
 
 <div class="button-container">
-    <button id="additem-button" ng-click="addItem()">Add Item <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+    <button id="additem-button" ng-click="addToCart()">Add Item <i class="fa fa-shopping-cart"
+                                                                      aria-hidden="true"></i>
     </button>
 </div>
 
