added logo and modified cells

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <body ng-controller="landingController">
 
 <header>
-    <h1 class="main-heading">Grocery Buddy</h1>
-
+    <!--<h1 class="main-heading">Grocery Buddy</h1>-->
+    <img src="images/grocerybuddylogo.png" id="logo"/>
     <ul class="main_nav">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
