--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
 
     <!--FireBase -->
     <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
+    <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyD1Biea31ZAJ0uVomVjGWHc5b5K-b4VUyQ",
+            authDomain: "grocerybuddy-47822.firebaseapp.com",
+            databaseURL: "https://grocerybuddy-47822.firebaseio.com",
+            storageBucket: "grocerybuddy-47822.appspot.com",
+        };
+        firebase.initializeApp(config);
+    </script>
 
     <!--Scripts-->
     <script src="script.js"></script>
