--- a/index.html
+++ b/index.html
@@ -20,24 +20,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.js"></script>
 
-    <!--FireBase -->
-    <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
-    <script>
-        // Initialize Firebase
-        var config = {
-            apiKey: "AIzaSyD1Biea31ZAJ0uVomVjGWHc5b5K-b4VUyQ",
-            authDomain: "grocerybuddy-47822.firebaseapp.com",
-            databaseURL: "https://grocerybuddy-47822.firebaseio.com",
-            storageBucket: "grocerybuddy-47822.appspot.com",
-        };
-        firebase.initializeApp(config);
-    </script>
-
     <!--Scripts-->
     <script src="script.js"></script>
 </head>
 
-<body ng-controller="landingController">
+<body ng-controller="mainCtrl">
 
 <header>
     <!--<h1 class="main-heading">Grocery Buddy</h1>-->
