added blurred background

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
 
 <body ng-controller="mainCtrl">
 
+<div class="content-container">
+    <div class="img-container"></div>
+    <div class="blur"></div>
+</div>
+
+
 <header>
     <!--<h1 class="main-heading">Grocery Buddy</h1>-->
     <img src="images/grocerybuddylogo.png" id="logo"/>
